force-app/main/default/objects/Serial__c/Serial__c.object-meta.xml
<CustomObject>
    <label>Serial</label>
    <nameField>
        <label>Series Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Serials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>