force-app/main/default/objects/Serial__c/fields/Delete_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Delete_Approval_Status__c</fullName>
    <label>Delete Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>