force-app/main/default/objects/Serial__c/fields/Opis_serialu__c.field-meta.xml
<CustomField>
    <fullName>Opis_serialu__c</fullName>
    <label>Series description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>