force-app/main/default/objects/Serial__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>How this series is rated in web</description>
    <label>Rating</label>
    <length>10</length>
    <type>Text</type>
</CustomField>