force-app/main/default/objects/Serial__c/fields/Url_for_logo__c.field-meta.xml
<CustomField>
    <fullName>Url_for_logo__c</fullName>
    <label>Url for logo</label>
    <type>Url</type>
</CustomField>