force-app/main/default/objects/Serial__c/fields/Url_to_trailer__c.field-meta.xml
<CustomField>
    <fullName>Url_to_trailer__c</fullName>
    <label>Url to trailer on YT</label>
    <type>Url</type>
</CustomField>