force-app/main/default/objects/Serial__c/validationRules/Decription_should_be_at_least_30_chars_l.validationRule-meta.xml
<ValidationRule>
    <fullName>Decription_should_be_at_least_30_chars_l</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Opis_serialu__c ) &lt; 30</errorConditionFormula>
    <errorMessage>Description should have at least 30 characters</errorMessage>
</ValidationRule>