force-app/main/default/objects/Serial__c/validationRules/Serial_name_should_be_between_1_and_30.validationRule-meta.xml
<ValidationRule>
    <fullName>Serial_name_should_be_between_1_and_30</fullName>
    <active>true</active>
    <errorConditionFormula>AND(LEN(Name) &gt; 30, LEN(Name) &lt;1)</errorConditionFormula>
    <errorMessage>Serial name should be between 1 and 30 characters long</errorMessage>
</ValidationRule>