force-app/main/default/objects/Serial__c/listViews/Queue_for_deleting_series_Serial.listView-meta.xml
<ListView>
    <fullName>Queue_for_deleting_series_Serial</fullName>
    <filterScope>Queue</filterScope>
    <label>Queue for deleting series</label>
    <queue>Queue_for_deleting_series</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>